use generated protobuf
